create handle process for voucher and event
