# src/routes/index.ts
@@ -1,14 +1,16 @@
 import { Router } from 'express';
 import swaggerUi from 'swagger-ui-express';
-import userRoute from './user';
 import authRoute from './auth';
+import userRoute from './user';
+import eventRoute from './event';
 import swaggerOutput from '../../logs/swagger_output.json';
 
 const router = Router();
 
 // Set up the routes
-router.use('/user', userRoute);
 router.use('/', authRoute);
+router.use('/user', userRoute);
+router.use('/event', eventRoute);
 router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerOutput));
 
 export default router;
